# AgentExample

./: Makefile  README.md  SKILLS.md  agents.md  experience.md  phase1_design.md  pyproject.toml  sessions.md
.github/workflows/: tests.yml
data/: README.md  data_dictionary.csv  init.txt  position_data.csv  reference_data.csv  scenario_manifest.csv  settlement_data.csv  trade_netting_data.csv
docs/: agentic_settlement_commentary_platform _v0.pptx  fais_use_case_claude_code_prompt.rtf  seed.tx
notebook/: phase1_firm_short_reference_workflow.ipynb
src/settlement_agent/: __init__.py  config.py
src/settlement_agent/agents/: __init__.py  root_agent.py
src/settlement_agent/agents/sub_agents/: __init__.py  commentary_agent.py  diagnosis_agent.py  evidence_agent.py  intake_agent.py  policy_hitl_agent.py
src/settlement_agent/application/: __init__.py  agents.py  eval_runner.py  workflow.py
src/settlement_agent/domain/: __init__.py  exceptions.py  models.py  utils.py
src/settlement_agent/infrastructure/: __init__.py  config_loader.py  csv_loader.py
src/settlement_agent/llm_providers/: __init__.py
src/settlement_agent/mcp_clients/: __init__.py
src/settlement_agent/monitoring/: __init__.py
src/settlement_agent/prompts/: __init__.py
src/settlement_agent/tools/: __init__.py  base.py  position_tool.py  reference_data_tool.py  registry.py  settlement_tool.py  trade_netting_tool.py
tests/agent/: test_eval_runner.py
tests/integration/: test_workflow.py
tests/unit/: test_csv_loading.py  test_tools.py  test_yaml_config.py
(+38 files in other folders)
